Include debug and release flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ aux_source_directory(src/core CORE_SOURCES)
 aux_source_directory(src/client CLIENT_SOURCES)
 aux_source_directory(src/server SERVER_SOURCES)
 
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 add_executable(client
     ${CLIENT_SOURCES}
     ${CORE_SOURCES}
